# Rasberrypi_computer_vision

./: README.md
object_code/: yolov4_tiny_detection  yolov4_tiny_detection.cpp
object_code/rt_code/include/: scheduler.h
object_code/yolo4_tiny/: CMakeLists.txt  README.md
object_code/yolo4_tiny/include/: yolo_utils.hpp
object_code/yolo4_tiny/src/: main.cpp  yolo_utils.cpp
object_code_new/: yolo_two_cameras  yolo_two_cameras.cpp
rt_code/: CMakeLists.txt  rt_object_test.cpp
rt_code/include/: task_manager.h
rt_code/src/: main.cpp  scheduler.cpp  task_manager.cpp
